# arthur_franco_neto_embarcatech_HBr_2025

./: README.md
projetos/adc_joystick/: README.md
projetos/adc_joystick/scr/adc_joystick/: CMakeLists.txt  adc_joystick.c
projetos/adc_joystick_xy/: CMakeLists.txt  adc_joystick_xy.c
projetos/adc_temperature/: CMakeLists.txt  adc_temperature.c
projetos/adc_temperature_rp2040/: README.md
projetos/adc_temperature_rp2040/scr/adc_temperature_rp2040/: CMakeLists.txt
projetos/adc_temperature_unity/: CMakeLists.txt  README.md  adc_temperature_unity.c
projetos/adc_temperature_unity/scr/: temperature.c  temperature.h
projetos/adc_temperature_unity/src/: temperature.c  temperature.h
projetos/adc_temperature_unity/tests/: CMakeLists.txt  test_temperature.c
projetos/countdown_counter_interrupt/: README.md
projetos/countdown_counter_interrupt/scr/countdown_counter_interrupt/: CMakeLists.txt  countdown_counter_interrupt.c
projetos/interrupt_counter/: CMakeLists.txt  README.md
projetos/pico_led_toogle/: CMakeLists.txt  README.md
projetos/pico_led_toogle/src/app/: main.c
projetos/pico_led_toogle/src/drivers/: led_embutido.c
projetos/pico_led_toogle/src/hal/: hal_led.c
projetos/pico_led_toogle/src/include/: hal_led.h  led_embutido.h
projetos/rfid_monitor/: README.md
projetos/rfid_monitor/src/: CMakeLists.txt  Projeto_Final.c  mfrc522.c  mfrc522.h
